@@ -1,6 +1,12 @@
 Changes with Apache 2.1.0-dev
 
   [Remove entries to the current 2.0 section below, when backported]
+  *) proxy_http fix: mod_proxy hangs when both KeepAlive and 
+     ProxyErrorOverride are enabled, and a non-200 response without a 
+     body is generated by the backend server. (e.g.: a client makes a 
+     request containing the "If-Modified-Since" and "If-None-Match" 
+     headers, to which the backend server respond with status 304.)
+     [Graham Wiseman <gwiseman fscinternet.com>, Richard Reiner]
 
   *) mod_ssl: Add support for distributed session cache using 'distcache'.
      [Geoff Thorpe <geoff geoffthorpe.net>]
